--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Talkie Tokie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
